[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sound/SFX/Text close.wav" type="AudioStream" id=1]
[ext_resource path="res://Sound/SFX/Text continue.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprites/UI/Textbox.png" type="Texture" id=3]
[ext_resource path="res://Sound/SFX/Text pop.wav" type="AudioStream" id=4]
[ext_resource path="res://UI/DialogueBox/DialogueBox.gd" type="Script" id=5]
[ext_resource path="res://UI/DialogueBox/DialogueBoxTutorial/DialogueTextTutorial.gd" type="Script" id=6]
[ext_resource path="res://Font/m5x7.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[node name="DialogueBoxTutorial" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 79.5
margin_top = 116.0
margin_right = -100.5
margin_bottom = -19.0
rect_scale = Vector2( 1.2, 1 )
mouse_filter = 2
texture = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueTextTutorial" type="RichTextLabel" parent="."]
anchor_left = 0.041
anchor_top = 0.11
anchor_right = 0.972
anchor_bottom = 0.926
margin_left = -0.00161982
margin_top = 0.013104
margin_right = 169.658
margin_bottom = 33.2931
rect_scale = Vector2( 0.434543, 0.524413 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
meta_underlined = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueSound" type="AudioStreamPlayer" parent="DialogueTextTutorial"]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="CloseSound" type="AudioStreamPlayer" parent="DialogueTextTutorial"]
stream = ExtResource( 1 )
volume_db = -20.0

[node name="CloseTimer" type="Timer" parent="DialogueTextTutorial"]
process_mode = 0
one_shot = true

[node name="DialogueText2" type="RichTextLabel" parent="."]
anchor_left = 0.041
anchor_top = 0.11
anchor_right = 0.972
anchor_bottom = 0.926
margin_left = 94.7351
margin_top = 33.725
margin_right = 264.395
margin_bottom = 67.005
rect_scale = Vector2( 0.255684, 0.308563 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
meta_underlined = false
text = "LEFT-CLICK to continue..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="PopUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[connection signal="timeout" from="DialogueTextTutorial/CloseTimer" to="DialogueTextTutorial" method="_on_CloseTimer_timeout"]
[connection signal="timeout" from="Timer" to="DialogueTextTutorial" method="_on_Timer_timeout"]
